overflow-x fix

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,6 +9,7 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    overflow-x: hidden;
 
     &::-webkit-scrollbar {
         background-color: $--navy;
